--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "lazysizes": "^2.0.2",
     "markdown-it": "^8.0.0",
     "markdown-it-attrs": "^0.7.0",
+    "markdown-it-container": "^2.0.0",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "merge": "^1.2.0",
     "metalsmith": "^2.2.0",
     "metalsmith-branch": "0.0.4",
